--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 
     <footer class="author-info">
       Coded by
-      <a href="#">Krowey Richmond Borquaye</a>
+      <a href="https://github.com/77Kromo">Krowey Richmond Borquaye</a>
       | Challenge by
       <a
         href="https://www.devchallenges.io?ref=challenge"
